Resolving Days : Day1

--- a/AdventOfCode2015/AdventOfCode2015/AdventOfCode2015.csproj
+++ b/AdventOfCode2015/AdventOfCode2015/AdventOfCode2015.csproj
@@ -8,9 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Tools\" />
-    <Folder Include="ResolvingDays\" />
-    <Folder Include="Tasks\" />
+    <None Update="Tasks\Day1\Day1.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Tasks\Day1\FirtDay.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
